2003-07-12  Chris Dean  <Chris.Dean@sokitomi.com>

	* ArrayGet.java (Externalizable): Implement writeExternal, 
	readExternal.  Fixes Savannah bug #4289
	* ArraySet.java (Externalizable): Likewise
	* ArrayNew.java (Externalizable): Likewise
	* ArrayLength.java (Externalizable): Likewise
    
2003-06-06  Per Bothner  <per@bothner.com>

	* Invoke.java (inlineClassName, inline): Call ApplyExp.setLine.

2003-05-17  Per Bothner  <per@bothner.com>

	* Invoke.java (applyN, applyN):  Use Symbol's getName method.

	* Invoke.java (inlineClassName):  Take InlineCalls parameter instead
	of Interpreter.  Get latter from former.
	If type is a Classtype and isExisting, emit error is not found.

	* InstanceOf.java (inline):  Upadte call to inlineClassName.
	* SlotGet.java (inline):  Likewise.
	* SlotSet.java (inline):  Likewise.

2003-05-16  Per Bothner  <per@bothner.com>

	* ClassMethods.java (checkName):  Take new 'reversible' parameter.
	* Invoke.java (getMethodName):  Pass false to checkName.
	* SlotGet.java (compile, getReturnType):  Pass true to checkName.
	* SlotSet.java (compile):  Likewise.
	Fixes bug reported 05-13 by Chris Dean <Chris.Dean@sokitomi.com>.

2003-05-13  Per Bothner  <per@bothner.com>

	* OccurrenceType.java:  New class, extends Type.
	* Makefile.am (java_sources):  Add new file.

2003-05-04  Per Bothner  <per@bothner.com>

	* Invoke.java (applyN):  Revert 04-30 change.
	* ClassMethods.java (apply):  Mangle method names non-reversibly.
	(checkName):  Likewise.

2003-04-30  Per Bothner  <per@bothner.com>

	* Invoke.java (applyN):  Use mangleNameIfNeeded rather than plain
	mangleName for consistency.

2002-11-23  Per Bothner  <per@bothner.com>

	* StaticFieldConstraint.java:  Moved from kawa.standard.
	* Makefile.am (java_sources):  Add new file.

2002-11-20  Per Bothner  <bothner@bothner.com>

	* ClassMethods.java:  Convert from ProcedureN to Procedure2.
	(apply2):  New method, replaces applyN.
	(apply(String,String)):  New method.
